Spawner shop improvements